add long geo ID, closes #23

--- a/05_resolve-simple.Rmd
+++ b/05_resolve-simple.Rmd
@@ -30,6 +30,7 @@ prj_id_nonhier <- dt_geostatus %>% filter(geostatus == "více míst nehierarchic
 
 ```{r metadata}
 source(here::here("read_metadata.R"))
+source(here::here("shared.R"))
 ```
 
 ```{r data-basics}
@@ -76,7 +77,8 @@ dtl_smpl <- dtl %>%
   group_by(obec_puvod, op_id, chunk, rozpad_typ) %>% 
   select(prj_id, radek, op_id, level, geo_id = value, level_orig,
          geo_id_orig = id_orig, rozpad_typ, 
-         rozpad_duvod, obec_puvod, chunk)
+         rozpad_duvod, obec_puvod, chunk) %>% 
+  add_long_geoid(ids)  
 ```
 
 ```{r}
